--- a/coursera/L2_Improving Deep Neural Networks/W2__L2_Optimization Methods (Momentum & Adam).ipynb
+++ b/coursera/L2_Improving Deep Neural Networks/W2__L2_Optimization Methods (Momentum & Adam).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -275,8 +275,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 0 - GD without Optimization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -340,50 +347,18 @@
     "\n",
     "![image](https://wx2.sinaimg.cn/mw1024/701c57e5ly1gdhku2oxj9j217m0ng7ie.jpg)\n",
     "\n",
-    "## 1.3 - update\n",
+    "## 1.3 - Code\n",
+    "详见\n",
     "```python\n",
-    "def init_velocity (params, L_len):\n",
-    "    # 创建和 W, b一样的矩阵, 创建 Velocity\n",
-    "    \"\"\"\n",
-    "    np.zeros_like([[5, 1, 1], [5, 1, 1]])\n",
-    "    return [[0 0 0], [0 0 0]]\n",
-    "    \"\"\"\n",
-    "    Velocity = {}\n",
-    "    for i in range(1, L_len):\n",
-    "        Velocity['dJ_dW' + str(i)] = np.zeros_like(params['W' + str(i)])\n",
-    "        Velocity['dJ_db' + str(i)] = np.zeros_like(params['b' + str(i)])\n",
-    "    return Velocity\n",
+    "def init_velocity (params, L_len)\n",
     "\n",
-    "def update_derivatives_momentum (params, grads, alpha, L_len, Velocity, beta = 0.9):\n",
-    "    \"\"\"\n",
-    "    𝑉_𝑑𝑤 = 𝛽 𝑉_𝑑𝑤 + (1−𝛽) 𝑑𝐽_𝑑𝑤  \n",
-    "    𝑤=𝑤 − 𝛼 𝑉_𝑑𝑤\n",
-    "    \"\"\"\n",
-    "    for l in range(1, L_len):\n",
-    "        # dJ_dw, dJ_dw\n",
-    "        dJ_dW = grads['dJ_dW' + str(l)]\n",
-    "        dJ_db = grads['dJ_db'+ str(l)]\n",
-    "        \n",
-    "        # V_dJ_dw, V_dJ_db\n",
-    "        V_dJ_dw = Velocity['dJ_dW' + str(l)]\n",
-    "        V_dJ_db = Velocity['dJ_db' + str(l)]\n",
-    "        \n",
-    "        # V_dJ_dw = beta * V_dJ_dw + (1 - beta) * dJ_dw\n",
-    "        # V_dJ_db = beta * V_dJ_db + (1 - beta) * dJ_db\n",
-    "        Velocity['dJ_dW' + str(l)] = beta * V_dJ_dw + (1 - beta) * dJ_dW\n",
-    "        Velocity['dJ_db' + str(l)] = beta * V_dJ_db + (1 - beta) * dJ_db\n",
-    "\n",
-    "        params['W' + str(l)] -= alpha * Velocity['dJ_dW' + str(l)]\n",
-    "        params['b' + str(l)] -= alpha * Velocity['dJ_db' + str(l)]\n",
-    "    \n",
-    "    return params\n",
-    "\n",
+    "def update_derivatives_momentum (params, grads, alpha, L_len, Velocity, beta = 0.9)\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -434,6 +409,8 @@
    "source": [
     "# 2 - Adam\n",
     "\n",
+    "## 2.1 - Momentum, RMSprop\n",
+    "\n",
     "Momentum\n",
     "1. $\\frac{dJ}{dw}$, $\\frac{dJ}{db}$\n",
     "\n",
@@ -460,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Adam\n",
+    "## 2.2 - Adam\n",
     "1. $\\frac{dJ}{dw}$, $\\frac{dJ}{db}$\n",
     "\n",
     "2. $V_{dw} = \\beta_1 v_{dw} + (1 - \\beta_1)$$\\frac{dJ}{dw}$\n",
@@ -472,12 +449,20 @@
     "5. $S_{dw}^{correct} = \\frac{S_{dw}}{1 - (\\beta_2)^t}$\n",
     "\n",
     "\n",
-    "6. $w -= \\alpha \\frac{V_{dw}^{correct}}{\\epsilon + \\sqrt{S_{dw}^{correct}}}$\n"
+    "6. $w -= \\alpha \\frac{V_{dw}^{correct}}{\\epsilon + \\sqrt{S_{dw}^{correct}}}$\n",
+    "\n",
+    "\n",
+    "## 2.3 - Code\n",
+    "\n",
+    "```python\n",
+    "def init_Adam (params, L_len):\n",
+    "def update_derivatives_Adam (params, grads, alpha, L_len, Velocity, Square, beta1 = 0.9, beta2 = 0.9, t = 2)\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -518,79 +503,6 @@
     "params = NN_Adam.training_Adam (beta1 = 0.9, beta2 = 0.999, t = 2)\n",
     "\n",
     "predict(train_X, train_Y, params, text = 'Adam 精确度')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "```python\n",
-    "# ====== Adam ====== \n",
-    "def init_Adam (params, L_len):\n",
-    "    # 1. 创建Velocity, 创建Square\n",
-    "    Velocity, Square = {}, {}\n",
-    "    \n",
-    "    # 2. 创建初始化值为0 和 每层params.weights, params.bias一样尺寸\n",
-    "    for l in range(1, L_len):\n",
-    "        W, b = params['W' + str(l)], params['b' + str(l)]\n",
-    "        \n",
-    "        Velocity['dJ_dW' + str(l)] = np.zeros_like(W)\n",
-    "        Velocity['dJ_db' + str(l)] = np.zeros_like(b)\n",
-    "        \n",
-    "        Square['dJ_dW' + str(l)] = np.zeros_like(W)\n",
-    "        Square['dJ_db' + str(l)] = np.zeros_like(b)\n",
-    "    \n",
-    "    return Velocity, Square\n",
-    "\n",
-    "\n",
-    "def update_derivatives_Adam (params, grads, alpha, L_len, Velocity, Square, beta1 = 0.9, beta2 = 0.9, t = 2):\n",
-    "    Velocity_correct = {}\n",
-    "    Square_correct = {}\n",
-    "    epsilon = 1e-8\n",
-    "    \n",
-    "    for l in range(1, L_len):\n",
-    "        dJ_dW_i = 'dJ_dW' + str(l)\n",
-    "        dJ_db_i = 'dJ_db' + str(l)\n",
-    "        \n",
-    "        # 1. derivatives\n",
-    "        dJ_dW = grads[dJ_dW_i]\n",
-    "        dJ_db = grads[dJ_db_i]\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        𝑉𝑑𝑤=𝛽1 * V𝑑𝑤 + (1−𝛽1)  𝑑𝐽𝑑𝑤 \n",
-    "        𝑆𝑑𝑤=𝛽2 * 𝑆𝑑𝑤 + (1−𝛽2)  (𝑑𝐽𝑑𝑤)^2\n",
-    "        \"\"\"\n",
-    "        # 2. V_dJ_dW, V_dJ_db\n",
-    "        Velocity[dJ_dW_i] = beta1 * Velocity[dJ_dW_i] + (1 - beta1) * dJ_dW\n",
-    "        Velocity[dJ_db_i] = beta1 * Velocity[dJ_db_i] + (1 - beta1) * dJ_db\n",
-    "        \n",
-    "        # 3. S_dJ_dW, S_dJ_db\n",
-    "        Square[dJ_dW_i] = beta2 * Square[dJ_dW_i] + (1 - beta2) * np.power(dJ_dW, 2)\n",
-    "        Square[dJ_db_i] = beta2 * Square[dJ_db_i] + (1 - beta2) * np.power(dJ_db, 2)\n",
-    "        \n",
-    "        # 4. Velocity_correct: V_dJ_dW, V_dJ_db\n",
-    "        \"\"\"\n",
-    "        𝑉𝑐𝑜𝑟𝑟𝑒𝑐𝑡_𝑑𝐽_𝑑𝑤 = V_𝑑𝐽_𝑑𝑤 / 1−(𝛽1)^𝑡\n",
-    "        𝑆𝑐𝑜𝑟𝑟𝑒𝑐𝑡_𝑑𝐽_𝑑𝑤 = S_𝑑𝐽_𝑑𝑤 / 1−(𝛽2)^𝑡\n",
-    "        \"\"\"\n",
-    "        Velocity_correct[dJ_dW_i] = Velocity[dJ_dW_i] / (1 - np.power(beta1, t))\n",
-    "        Velocity_correct[dJ_db_i] = Velocity[dJ_db_i] / (1 - np.power(beta1, t))\n",
-    "        \n",
-    "        # 5. Square_correct: S_dJ_dW, S_dJ_db\n",
-    "        Square_correct[dJ_dW_i] = Square[dJ_dW_i] / (1 - np.power(beta2, t))\n",
-    "        Square_correct[dJ_db_i] = Square[dJ_db_i] / (1 - np.power(beta2, t))\n",
-    "        \n",
-    "        # 6. Update derivatives\n",
-    "        \"\"\"\n",
-    "        𝑤 −= a * Velocity_correct / e + sqrt(Square_correct)\n",
-    "        \"\"\"\n",
-    "        params['W' + str(l)] -= alpha * Velocity_correct[dJ_dW_i] / (epsilon + np.sqrt(Square_correct[dJ_dW_i]))\n",
-    "        params['b' + str(l)] -= alpha * Velocity_correct[dJ_db_i] / (epsilon + np.sqrt(Square_correct[dJ_db_i]))\n",
-    "        \n",
-    "    return params\n",
-    "        \n",
-    "```"
    ]
   },
   {
