--- a/coursera/L4_Convolutional Neural Networks/W1__Convolutional Neural Networks/W0__L0_CNN_forwardpass.ipynb
+++ b/coursera/L4_Convolutional Neural Networks/W1__Convolutional Neural Networks/W0__L0_CNN_forwardpass.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "        self.f, self.p, self.s = f, p, s\n",
     "        \n",
     "        # W, b\n",
-    "        self.W = np.random.rand(f, f, n_C, n_Cnext)\n",
+    "        # self.W = np.random.rand(f, f, n_C, n_Cnext)\n",
     "        self.b = np.random.rand(1, 1, 1, n_Cnext)\n",
     "        \n",
     "        # derivatives\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,10 +167,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x11b8fd950>"
+       "<matplotlib.image.AxesImage at 0x11bcb7590>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -198,7 +198,8 @@
     "print(A.shape)\n",
     "# ====== 不正经图像测试 END ======\n",
     "\n",
-    "n_Cnext = 8\n",
+    "# n_Cnext = 8\n",
+    "n_Cnext = 1\n",
     "\n",
     "hyperparameters = {\n",
     "    'filter': 2,\n",
@@ -223,18 +224,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weights/Filters: (2, 2, 3, 8)\n",
-      "bias: (1, 1, 1, 8)\n",
-      "derivatives W, b: (2, 2, 3, 8) (1, 1, 1, 8)\n",
+      "Weights/Filters: (2, 2, 3, 1)\n",
+      "bias: (1, 1, 1, 1)\n",
+      "derivatives W, b: (2, 2, 3, 1) (1, 1, 1, 1)\n",
       "A_pad: (1, 104, 104, 3)\n",
-      "Z_OUTPUT:  (1, 103, 103, 8)\n"
+      "Z_OUTPUT:  (1, 103, 103, 1)\n"
      ]
     }
    ],
