--- a/coursera/L4_Convolutional Neural Networks/W1__Convolutional Neural Networks/W1__L1_Convolutional Neural Networks.ipynb
+++ b/coursera/L4_Convolutional Neural Networks/W1__Convolutional Neural Networks/W1__L1_Convolutional Neural Networks.ipynb
@@ -273,8 +273,8 @@
    "source": [
     "def conv_single_step (a_slice_prev, W, b):\n",
     "    # s = 对应位置相乘 + b\n",
-    "    s = a_slice_prev * W + b\n",
-    "    Z = np.sum(s)\n",
+    "    s = a_slice_prev * W\n",
+    "    Z = np.sum(s) + b\n",
     "    return Z\n",
     "\n",
     "np.random.seed(1)\n",
